SERVER-6918 buildbot debug geo_borders.js, make geo errors more informative